# diagram-analyser

./: README.md  pyproject.toml
examples/: basic_usage.md
src/diagram_analyser/: __init__.py  analyser.py  api.py  cli.py  embedding.py  exceptions.py  manifest.py  schemas.py  signals.py  vision.py
src/diagram_analyser/parsers/: __init__.py  drawio.py  graphviz.py  mermaid.py  plantuml.py
tests/: test_analyser.py  test_api.py  test_cli.py  test_drawio.py  test_embedding.py  test_graphviz.py  test_mermaid.py  test_plantuml.py  test_public_api.py  test_signals.py
